<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/marron"
    tools:context="com.cs496.osu.dream_catcher.OptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionsLabel"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:paddingBottom="20dp"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/rcrdDream"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:background="@drawable/option_buttons"
            android:id="@+id/rcrdBtn"
            android:onClick="getSpeech"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/viewDream"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:background="@drawable/option_buttons"
            android:id="@+id/viewBtn"
            android:onClick="getDreams"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/reportDream"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:background="@drawable/option_buttons"
            android:layout_marginTop="30dp"
            android:id="@+id/reportBtn"
            android:onClick="getReport"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/signOut"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:background="@drawable/option_buttons"
            android:layout_marginTop="30dp"
            android:id="@+id/signOutBtn"
            android:onClick="signOutApp"/>

    </LinearLayout>
</RelativeLayout>
