<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_speech"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/marron"
    tools:context="com.cs496.osu.dream_catcher.DisplaySpeechActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:maxHeight="300dp"
        android:scrollbars="vertical"
        android:background="@drawable/rounded_textview"
        android:textColor="@color/black"
        android:id="@+id/speechResults"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:text="@string/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:id="@+id/saveBtn"
                android:onClick="saveSummary"/>

            <Button
                android:text="@string/addSpeechBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/recordMoreBtn"
                android:onClick="recordMore"/>

            <Button
                android:text="@string/addDetailsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/addDetailsBtn"
                android:onClick="addDetails"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>